# fastapi-clean-architecture

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: notify.yml
cmd/admin/: main.py
cmd/app/: main.py
docker/: .env.example  Dockerfile.backend  Dockerfile.migration  docker-compose.yml  rabbitmq-docker-compose.yml
env/: example.env
internal/app/: __init__.py  admin.py  app.py  config.py  database.py
internal/config/: __init__.py  database.py  events.py  settings.py
internal/controller/amqp/: router.py
internal/controller/http/: router.py
internal/controller/v1/: applications.py
internal/dto/: application.py
internal/entity/: __init__.py  application.py  base.py  mixin.py
internal/service/: __init__.py  application.py
internal/usecase/: applications.py  responses.py  utils.py  viewsets.py
internal/usecase/pydantic/: __init__.py  datatypes.py  errors.py  validators.py
internal/usecase/repo/: __init__.py  application.py  base.py  inject.py
internal/usecase/repository/: __init__.py  base.py  inject.py  repository.py
internal/usecase/utils/: __init__.py  applications.py  consts.py  datatypes.py  enums.py  errors.py  exception_handlers.py  exceptions.py  mocks.py  response.py  responses.py  validators.py
internal/usecase/viewsets/: __init__.py  config.py  routes.py  utils.py
internal/utils/: events.py  exceptions.py  validators.py
internal/utils/viewsets/: __init__.py  config.py  routes.py  utils.py
migrations/: env.py
migrations/versions/: 075b30336604_add_application.py
package/sqlalchemy/: __init__.py  mocks.py  repository.py
package/sqlalchemy/repository/: __init__.py  abstract.py  repository.py
(+16 files in other folders)
