[tool.poetry]
name = "fastapi-clean-architecture"
version = "0.9.1"
description = "Clean FastAPI architecture"

license = "MIT"

authors = ["Maxim Bigin <i@flaiers.me>"]

readme = "README.md"
repository = "https://github.com/flaiers/fastapi-clean-architecture"


[tool.poetry.dependencies]
python = "^3.10"

uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

Flask = "^2.1.3"
Flask-Admin = "^1.6.0"
fastapi = "^0.79.0"
fastapi-pagination = "^0.9.3"

pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}

alembic = "^1.8.1"
SQLAlchemy = "^1.4.39"
pytorm = "^0.0.6"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
multimethod = "^1.8"
aio-pika = "^8.0.3"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

wemake-python-styleguide = "^0.16.1"
mypy = "^0.942"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
